# python-formio-data

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py  shell.nix
formio/: __init__.py  components.py  submission.py  utils.py
formio-data/: builder.py
formio/tests/: __init__.py  (+4 more)
formio_data/: builder.py
formio_parser/: __init__.py  builder.py  components.py  form.py  submission.py  utils.py
formiodata/: __init__.py  builder.py  components.py  form.py  submission.py  utils.py
nix/: pkgs.nix
tests/: __init__.py  test_builder.py  test_common.py  test_component.py  test_component_a_resource.py  test_component_address.py  test_component_class_mapping.py  test_component_datagrid.py  test_component_datetime.py  test_component_day.py  test_component_editgrid.py  test_component_email.py  test_component_file_base64.py  test_component_file_storage_base64.py  test_component_file_storage_url.py  test_component_number.py  test_component_panel.py  test_component_phoneNumber.py  test_component_radio.py  test_component_resource.py  test_component_select_multiple.py  test_component_select_one.py  test_component_select_one_data_src_url.py  test_component_selectboxes.py  test_component_survey.py  test_component_table.py  test_component_tabs.py  test_component_textfield.py  test_component_value_default.py  test_conditional_visibility_json_logic.py  test_conditional_visibility_nested_json_logic.py  test_conditional_visibility_simple.py  test_datagrid_in_panel.py  test_default_value_component.py  test_nested_components.py  test_nesting_datagrid.py  test_performance_nested_components.py  test_submission.py  test_validation_error_simple.py  test_view_render_component.py  (+1 more)
(+71 files in other folders)
