[tool.poetry]
name = "formio-data"
version = "0.4.1"
homepage = "https://github.com/novacode-nl/python-formio-data"
description = "formio.js JSON-data API"
readme = "README.md"
authors = ["Bob Leers <bob@novacode.nl>"]
license = "MIT"
packages = [ { include = "formiodata/**/*.py" } ]
exclude = ["tests/*"]

[tool.poetry.dependencies]
python = "^3.7"

requests = "^2.27.1"
json_logic_qubit = { version = "^0.9.1", optional = true }

[tool.poetry.extras]
json_logic = ["json_logic_qubit"]
