[tool.poetry]
name = "formio-data"
version = "0.4.2"
homepage = "https://github.com/novacode-nl/python-formio-data"
description = "formio.js JSON-data API"
readme = "README.md"
authors = ["Bob Leers <bob@novacode.nl>"]
license = "MIT"
packages = [ { include = "formiodata/**/*.py" } ]
exclude = ["tests/*"]

[tool.poetry.dependencies]
python = "^3.6"

python-dateutil = "^2.8.2"
requests = "^2.27.1"
json_logic_qubit = { version = "^0.9.1", optional = true }

[tool.poetry.extras]
json_logic = ["json_logic_qubit"]
