[tool.poetry]
name = "formio-data"
version = "1.0.3"
homepage = "https://github.com/novacode-nl/python-formio-data"
description = "formio.js JSON-data API"
readme = "README.md"
authors = ["Bob Leers <bob@novacode.nl>"]
license = "MIT"
packages = [ { include = "formiodata/**/*.py" } ]
exclude = ["tests/*"]

[tool.poetry.dependencies]
python = "^3.6"

python-dateutil = {version = "^2.8.2", python = "<= 3.6" }
requests = "*"
json_logic_qubit = { version = "^0.9.1", optional = true }

[tool.poetry.extras]
json_logic = ["json_logic_qubit"]
